compiler/tests/en/errors/match_unknown_enum_member.salam
// EXPECT: E016
enum Color:
    red
    green
end

func main:
    c := Color.red
    match c:
        purple: println "p" end
        else: println "other" end
    end
end
